# macor

./: .gitignore  Cargo.toml  README.md  justfile
benches/: time_benchmark.rs
example_programs/: AasBAttack.AnB  BadSecretBetween.AnB  FreePW.AnB  KeyEx1.AnB  KeyEx2.AnB  KeyEx3.AnB  KeyEx3b.AnB  KeyEx4.AnB  KeyEx4b.AnB  KeyEx5.AnB  KeyEx5b.AnB  KeyEx5c.AnB  KeyEx6.AnB  NSSK.AnB  SimpleOpaque.AnB  SimpleSym.AnB  TLS_1_3.AnB
fmt/: Cargo.toml
fmt/src/: lib.rs
hello/: example.AnB  sample.rs
lsp/: Cargo.toml  language-configuration.json  macor.tmLanguage.json  package-lock.json  package.json
lsp/src/: extension.ts  main.rs
omg/: Cargo.toml  README.md
omg/src/: comm.rs  lib.rs  terms.rs
omg_chat/: Cargo.toml
omg_crypt/: Cargo.toml
omg_crypt/src/: lib.rs  main.rs
omg_example/: Cargo.toml
omg_example/src/: asymtest.rs  main.rs  test.rs
omg_gen/: Cargo.toml
omg_gen/src/: dolev_yao.rs  example.AnB  example.sym.AnB  example_old.AnB  generated_example.rs  lib.rs  main.rs  output.rs  v2.rs
parse/: Cargo.toml
parse/benches/: speed_benchmark.rs
parse/src/: ast.rs  chumskyparse.rs  lib.rs  parser.lalrpop
src/: ast.rs  chumskyparse.rs  dolev_yao.rs  dolev_yao_old.rs  evaluation.rs  execution.rs  lib.rs  lower.rs  main.rs  messages.rs  parse.rs  parser.lalrpop  protocol.rs  search.rs  sessions.rs  terms.rs  typing.rs  validate.rs  verifier.rs
