[package]
name = "macor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.19.8", features = ["lexer"] }

[dependencies]
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
logos = "0.12.1"
miette = { version = "4.7.1", features = ["fancy"] }
once_cell = "1.12.0"
regex = "1.5.6"
thiserror = "1.0.31"
