[package]
name = "macor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.19.8", features = ["lexer"] }

[dependencies]
itertools = "0.10.3"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
logos = "0.12.1"
miette = { version = "4.7.1", features = ["fancy"] }
once_cell = "1.12.0"
regex = "1.5.6"
thiserror = "1.0.31"
chumsky = "0.8"
indexmap = "1.8.2"
smol_str = "0.1.23"
macor-parse = { path = "parse" }
macor-fmt = { path = "fmt" }
ena = "0.14.0"
rayon = "1.5.3"
clap = { version = "3.2.5", features = ["derive"] }
yansi = "0.5.1"

[profile.release]
debug = true

[workspace]
members = [
    "lsp",
    "parse",
    "fmt",
    "omg",
    "omg_gen",
    "omg_example",
    "omg_crypt",
    "omg_chat",
]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "time_benchmark"
harness = false
