[package]
name = "macor-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19", features = ["full"] }
tower-lsp = "0.17.0"
macor = { path = ".." }
dashmap = "5.3.4"
miette = "4.7.1"
