[package]
name = "omg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
educe = "0.4.20"
postcard = { version = "1.0.2", features = ["use-std", "alloc", "experimental-derive"], default-features = false }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.90"
thiserror = "1.0.37"
tracing = "0.1.37"
