[package]
name = "omg_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
omg = { path = "../omg" }
postcard = "1.0.2"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
clap = { version = "4.0.29", features = ["derive"] }
