[package]
name = "omg_crypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
educe = "0.4.20"
omg = { version = "0.1.0", path = "../omg" }
postcard = { version = "1.0.2", features = ["use-std"] }
ring = { version = "0.16.20", features = ["std"] }
rsa = { version = "0.7.2", features = ["serde"] }
serde = { version = "1.0.150", features = ["derive"] }
tracing = "0.1.37"
