[package]
name = "omg_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
educe = "0.4.20"
omg = { path = "../omg" }
omg_crypt = { version = "0.1.0", path = "../omg_crypt" }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
