[package]
name = "omg_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
itertools = "0.10.5"
omg = { path = "../omg" }
macor = { path = "../" }
macor-parse = { path = "../parse" }
educe = "0.4.20"
